# mup

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs  main.rs
src/loader/: fabric.rs  forge.rs  mod.rs  neoforge.rs  paper.rs  vanilla.rs
src/plugin/: hangar.rs  mod.rs  modrinth.rs
src/server/: eula.rs  lockfile.rs  mod.rs
